[project]
name = "macrostrat.tileserver-utils"
version = "0.1.0"
description = "Utilities for Macrostrat tile servers"
authors = [{ name = "Daven Quinn", email = "code@davenquinn.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
dependencies = [
    "starlette (>=0.37.0,<0.47.0)",
    "fastapi (>=0.111.0,<0.112.0)",
    "morecantile (>=5.0.0,<7.0.0)",
    "buildpg (>=0.4,<0.5)",
    "macrostrat.utils (>=1.3.1,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
]

[tool.hatch.build.targets.sdist]
include = ["macrostrat"]

[tool.hatch.build.targets.wheel]
include = ["macrostrat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
