[tool.poetry]
name = "macrostrat-raster-pipeline"
version = "0.1.0"
description = "Raster pipeline functions for Macrostrat"
authors = ["Daven Quinn <dev@davenquinn.com>"]
readme = "README.md"
packages = [{include = "macrostrat"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
