[project]
name = "api"
version = "2.3.5-beta.1"
description = ""
authors = [{ name = "Cannon Lock", email = "clock@wisc.edu" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.22,<3",
    "python-dotenv>=1.0.0,<2",
    "fastapi>=0.121.2,<0.123",
    "httpx>=0.27.0,<0.29",
    "asyncpg>=0.28.0,<0.31.0",
    "pytest-asyncio>=1.3.0,<2",
    "uvicorn>=0.23.2,<0.46.0",
    "geojson-pydantic>=2.1.1,<3",
    "pyjwt>=2.8.0,<3",
    "werkzeug>=3.0.1,<4",
    "aiohttp>=3.8.6,<4",
    "python-jose[cryptography]>=3.3.0,<4",
    "bcrypt>=4.1.1,<5",
    "minio>=7.2.3,<8",
    "numpy>=2.4.4,<3",
    "python-multipart>=0.0.9,<0.0.10",
    "python-slugify>=8.0.4,<9",
    "macrostrat.database>=4.0.0,<5",
    "macrostrat.match-utils",
    "morecantile>=7.0.2",
    "pydantic-settings>2"

]

[dependency-groups]
dev = [
    "bandit>=1.7,<1.8",
    "mypy>=1.6,<1.7",
    "pylint>=3.0,<3.1",
    "safety>=2.3,<2.4",
    "pytest>=8.3.5,<9",
    "docker>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
"macrostrat.match-utils" = { editable = true, path = "../../py-modules/match-utils" }
