[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "Macrostrat tile server"
name = "macrostrat.legacy-tileserver"
packages = [{ include = "macrostrat" }]
version = "2.1.0"

[tool.poetry.dependencies]
fastapi = "^0.111.0"
python = "^3.9"
python-dotenv = "^1.0.0"
typer = "^0.12.3"
uvicorn = "0.16.0"
asyncpg = "^0.23.0"
buildpg = "^0.4"
"macrostrat.utils" = "^1.2.0"
# Local wheel of macrostrat.tile-cache. This must be built (using make in the py-modules directory)
# and copied here before Docker build.
"macrostrat.tileserver-utils" = { file = "deps/macrostrat_tileserver_utils-0.1.0-py3-none-any.whl" }
"macrostrat.database" = "^3.0.0"

# Raster tiles dependencies cannot be installed with poetry
morecantile = "^6.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^24.8.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
