[project]
name = "macrostrat.legacy-tileserver"
version = "2.0.0-beta.6"
description = "Macrostrat legacy tile server"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.9,<3.10"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "python-dotenv>=1.0.0,<2",
    "typer>=0.12.3,<0.13",
    "uvicorn==0.16.0",
    "asyncpg>=0.23.0,<0.24",
    "buildpg>=0.4,<0.5",
    "morecantile>=6.2.0,<7",
    "macrostrat.utils>=1.2.0,<2",
    "macrostrat.database>=3.0.0,<4",
    "macrostrat.tileserver-utils"
]

[tool.uv.sources]
"macrostrat.tileserver_utils" = { path = "../../py-modules/tileserver-utils", editable = true }


[dependency-groups]
dev = [
    "isort>=5.12.0,<6",
    "black>=24.8.0,<25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["macrostrat"]
