[project]
name = "macrostrat.tileserver"
version = "3.0.0-beta.1"
description = "Macrostrat tile server"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.10, <4"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "macrostrat.database~=3.0",
    "macrostrat.utils>=1.2.0,<2",
    "pytest>=7.2.1,<8",
    "python-dotenv>=1.0.0,<2",
    "typer>=0.12.3,<0.13",
    "uvicorn>=0.34.2,<0.35",
    "titiler>=0.18.5,<0.19",
    "httpx>=0.27.2,<0.28",
    "mapbox-vector-tile>=2.1.0,<3",
    "timvt",
    "macrostrat.tileserver-utils",
]

[dependency-groups]
dev = [
    "isort>=5.12.0,<6",
    "black>=24.8.0,<25",
    "macrostrat-dinosaur>=3.1.1,<4",
]

[tool.uv]

[tool.uv.sources]
timvt = { path = "./deps/timvt_local", editable = true }
"macrostrat.tileserver_utils" = { path = "../../py-modules/tileserver-utils", editable = true }

[tool.hatch.build.targets.sdist]
include = ["macrostrat"]

[tool.hatch.build.targets.wheel]
include = ["macrostrat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = "deps/*"
addopts = [
    "--import-mode=importlib",
]


