[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "Macrostrat tile server"
name = "macrostrat.tileserver"
packages = [{ include = "macrostrat" }]
version = "3.0.0-beta.2"

[tool.poetry.dependencies]
fastapi = "^0.111.0"
"macrostrat.database" = "^3.0"
"macrostrat.utils" = "^1.2.0"
pytest = "^7.2.1"
python = "^3.10"
python-dotenv = "^1.0.0"
typer = "^0.12.3"
uvicorn = "^0.34.2"
titiler = "^0.18.5"
httpx = "^0.27.2"
mapbox-vector-tile = "^2.1.0"
timvt = { path = "./deps/timvt_local", develop = true }

[tool.poetry.group.local.dependencies]
# Local wheel of macrostrat.tileserver-utils. This must be built (using make in the py-modules directory)
# and copied here before Docker build.
"macrostrat.tileserver-utils" = { file = "./deps/macrostrat_tileserver_utils-0.1.0-py3-none-any.whl" }

# Raster tiles dependencies cannot be installed with poetry

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^24.8.0"
macrostrat-dinosaur = "^3.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
norecursedirs = "deps/*"
addopts = [
    "--import-mode=importlib",
]


